--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AlpineTech Birthday Celebration</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: 'Segoe UI', sans-serif;
       background: #f0f4ff;
-      overflow: hidden;
+      height: 100%;
       text-align: center;
     }
 
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+
     .card {
+      width: 90%;
       max-width: 650px;
       margin: 80px auto;
       padding: 30px;
@@ -53,22 +64,24 @@
     }
 
     .balloon {
-      position: absolute;
+      position: fixed;
       width: 40px;
       height: 60px;
       background: red;
       border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
       animation: floatUp 6s linear infinite;
       opacity: 0;
+      z-index: 1;
     }
 
     .firework {
-      position: absolute;
+      position: fixed;
       width: 10px;
       height: 10px;
       background: gold;
       border-radius: 50%;
       animation: explode 1s ease-out forwards;
+      z-index: 1;
     }
 
     @keyframes floatUp {
@@ -84,21 +97,26 @@
     [contenteditable=true] {
       outline: none;
     }
+
+    @media (max-width: 480px) {
+      .card {
+        margin: 40px 10px;
+        padding: 20px;
+      }
+    }
   </style>
 </head>
 <body>
 
   <div class="card">
-    <h1 contenteditable="true">Happy Birthday Bhavya🎉</h1>
+    <h1 contenteditable="true">Happy Birthday Bhavya 🎉</h1>
     <p>Click the button below and watch the celebration begin!</p>
     <button class="btn" onclick="celebrate()">Celebrate Now</button>
 
-    <!-- Employee Photo (editable URL via right-click/Inspect for advanced HR users) -->
     <div class="photo" id="photoBlock">
       <img src="https://i.postimg.cc/13HcPhgj/Whats-App-Image-2025-07-11-at-12-49-44-PM.jpg" alt="Employee Photo" />
     </div>
 
-    <!-- Birthday Message -->
     <div class="message" id="messageBlock">
       <h2 style="color:#7c3aed;" contenteditable="true">Wishing You a Day Full of Joy, Bhavya!</h2>
       <p style="font-size:17px;color:#374151;" contenteditable="true">
