--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       font-family: 'Segoe UI', sans-serif;
       background: #f0f4ff;
       height: 100%;
+      overflow-x: hidden;
       text-align: center;
+      padding-bottom: 10%;
     }
 
     body {
@@ -19,8 +21,16 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      overflow-x: hidden;
       overflow-y: auto;
+      position: relative;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      pointer-events: none;
     }
 
     .card {
@@ -84,6 +94,13 @@
       z-index: 1;
     }
 
+    .popper {
+      position: fixed;
+      font-size: 24px;
+      animation: fallPopper 2s ease-out forwards;
+      z-index: 2;
+    }
+
     @keyframes floatUp {
       0% { transform: translateY(100vh); opacity: 1; }
       100% { transform: translateY(-100vh); opacity: 0; }
@@ -92,6 +109,17 @@
     @keyframes explode {
       0% { transform: scale(1); opacity: 1; }
       100% { transform: scale(5); opacity: 0; }
+    }
+
+    @keyframes fallPopper {
+      0% {
+        transform: translateY(-20px) rotate(0deg);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(100vh) rotate(360deg);
+        opacity: 0;
+      }
     }
 
     [contenteditable=true] {
@@ -108,6 +136,8 @@
 </head>
 <body>
 
+  <canvas id="fireCanvas"></canvas>
+
   <div class="card">
     <h1 contenteditable="true">Happy Birthday Bhavya 🎉</h1>
     <p>Click the button below and watch the celebration begin!</p>
@@ -118,7 +148,7 @@
     </div>
 
     <div class="message" id="messageBlock">
-      <h2 style="color:#7c3aed;" contenteditable="true">Wishing You a Day Full of Joy, Bhavya!</h2>
+      <h2 style="color:#7c3aed;" contenteditable="true">Wishing You a Day Full of Joy, Bhavya! 🎊</h2>
       <p style="font-size:17px;color:#374151;" contenteditable="true">
         May your year be filled with exciting challenges, big wins, and beautiful moments.
         You bring energy and excellence to everything you do — thank you for being you! 💙
@@ -148,10 +178,22 @@
       setTimeout(() => fw.remove(), 1000);
     }
 
+    function createPopper() {
+      const popper = document.createElement('div');
+      popper.className = 'popper';
+      popper.innerText = '🎉';
+      popper.style.left = Math.random() * window.innerWidth + 'px';
+      popper.style.top = (Math.random() * window.innerHeight / 2) + 'px';
+      popper.style.transform = `rotate(${Math.random() * 360}deg)`;
+      document.body.appendChild(popper);
+      setTimeout(() => popper.remove(), 2000);
+    }
+
     function celebrate() {
       for (let i = 0; i < 40; i++) {
         setTimeout(createBalloon, i * 150);
         if (i % 3 === 0) setTimeout(createFirework, i * 150);
+        if (i % 2 === 0) setTimeout(createPopper, i * 150);
       }
 
       document.getElementById('photoBlock').style.display = 'block';
@@ -160,7 +202,55 @@
         document.getElementById('photoBlock').style.opacity = 1;
         document.getElementById('messageBlock').style.opacity = 1;
       }, 300);
+
+      triggerSkyFireworks();
     }
+
+    // Canvas Fireworks
+    const canvas = document.getElementById("fireCanvas");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    const particles = [];
+
+    function triggerSkyFireworks() {
+      const colors = ["#ff1744", "#fdd835", "#00e676", "#2979ff", "#ff9100"];
+      for (let i = 0; i < 80; i++) {
+        particles.push({
+          x: window.innerWidth / 2,
+          y: window.innerHeight / 2,
+          radius: Math.random() * 3 + 2,
+          color: colors[Math.floor(Math.random() * colors.length)],
+          angle: Math.random() * 2 * Math.PI,
+          speed: Math.random() * 5 + 2,
+          life: 100
+        });
+      }
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      particles.forEach((p, index) => {
+        const vx = Math.cos(p.angle) * p.speed;
+        const vy = Math.sin(p.angle) * p.speed;
+        p.x += vx;
+        p.y += vy;
+        p.life -= 1;
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
+        ctx.fillStyle = p.color;
+        ctx.fill();
+        if (p.life <= 0) particles.splice(index, 1);
+      });
+      requestAnimationFrame(animate);
+    }
+
+    animate();
+    window.addEventListener("resize", () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
   </script>
 
 </body>
